i#1643 Yosemite support: fix build errors on Yosemite and with clang 6.0
Fixes build errors, mostly from a more recent toolchain on MacOSX but also
from Yosemite:
+ System call number deprecation (xref i#1659 for properly handling a
  replaced number)
+ Disable app_suite for now as it does not build (i#1660 covers fixing)
+ Fix several nasm assembler errors
+ Remove unused functions
+ Ifdef WINDOWS for some Windows-only code

SVN-Revision: 2113

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -872,24 +872,27 @@ if (TOOL_DR_MEMORY)
     "" OFF "whitelist")
 endif (TOOL_DR_MEMORY)
 
-add_subdirectory(app_suite)
-if (TOOL_DR_HEAPSTAT)
-  # i#1358: Dr. Heapstat currently can't handle code in the heap
-  set(app_suite_ops "--gtest_filter=-MallocTests.Executable")
-else ()
-  set(app_suite_ops "")
-endif ()
-newtest_nobuild(app_suite app_suite_tests "${app_suite_ops}"
-  "-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt"
-  # i#1309: turn off some DR debug checking to speed up the test, as it times out
-  # on Dr. Heapstat w/ online symbolization.
-  "-checklevel 1" OFF "")
-# Ensure ctest itself doesn't time out app_suite (it can take >60s on the bots):
-set_tests_properties(app_suite PROPERTIES TIMEOUT 120)
-if (TOOL_DR_MEMORY)
-  newtest_nobuild(app_suite.pattern app_suite_tests ""
-    "-unaddr_only;-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt"
-    "" OFF "")
+# XXX i#1660: gtest is not building with clang 6.0
+if (NOT APPLE)
+  add_subdirectory(app_suite)
+  if (TOOL_DR_HEAPSTAT)
+    # i#1358: Dr. Heapstat currently can't handle code in the heap
+    set(app_suite_ops "--gtest_filter=-MallocTests.Executable")
+  else ()
+    set(app_suite_ops "")
+  endif ()
+  newtest_nobuild(app_suite app_suite_tests "${app_suite_ops}"
+    "-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt"
+    # i#1309: turn off some DR debug checking to speed up the test, as it times out
+    # on Dr. Heapstat w/ online symbolization.
+    "-checklevel 1" OFF "")
+  # Ensure ctest itself doesn't time out app_suite (it can take >60s on the bots):
+  set_tests_properties(app_suite PROPERTIES TIMEOUT 120)
+  if (TOOL_DR_MEMORY)
+    newtest_nobuild(app_suite.pattern app_suite_tests ""
+      "-unaddr_only;-suppress;{DRMEMORY_CTEST_SRC_DIR}/app_suite/default-suppressions.txt"
+      "" OFF "")
+  endif ()
 endif ()
 
 # framework subdir is added at top level b/c wants DR cflags
