i#58 MacOS support: test suite
Defines an OSX test label with a handful of tests in it and passes an
INCLUDE_LABEL parameter to runsuite to allow us to start automated testing
on Mac without having to get every single test working, or to clutter up
tests/CMakeLists.txt with ifs.

SVN-Revision: 2115

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -924,3 +924,12 @@ else (NOT X64)
   newtest_ex(track_origins track_origins.c "" "-light;-track_origins_unaddr" ""
     OFF "" 0)
 endif (NOT X64)
+
+if (APPLE)
+  # Enable a few tests for the test suite without perturbing
+  # all the code above.
+  # XXX: can we get this to automatically happen for a local "ctest" w/o
+  # the user having to pass "-L OSX"?
+  set_tests_properties(hello free unit_tests malloc asmtest bitfield addronly
+    float annotations free.pattern PROPERTIES LABELS OSX)
+endif ()
