--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "dynamorio"]
-	path = dynamorio
-	url = https://github.com/DynamoRIO/dynamorio
+        path = dynamorio
+        url = https://github.com/DynamoRIO/dynamorio.git
 [submodule "third_party/googletest"]
-	path = third_party/googletest
-	url = https://github.com/DynamoRIO/googletest
+        path = third_party/googletest
+        url = https://github.com/DynamoRIO/googletest.git
