i#94 other alloc routines: add aligned allocation support
Implements aligned allocation support via a strategy of placing pre-alloc
space on the free list for regular allocs and using special mmap header
fields for large allocs.

Adds a test of posix_memalign() to tests/memalign.

Aligned allocations are *not supported when wrapping.

Review-URL: https://codereview.appspot.com/266760043

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -756,6 +756,7 @@ if (TOOL_DR_MEMORY)
 
   if (UNIX)
     newtest(memalign memalign.c)
+    newtest_nobuild(memalign-nodelay memalign "" "-delay_frees;0" "" OFF "")
   endif (UNIX)
 
   # persistent cache tests: currently only light mode is supported
