Updates DR to c7204c7 for Linux early injection support, clang build failure fixes, and several other early injection fixes including DRi#1659, DRi#1660, DRi#1661, DRi#884.
Adds fixes to initial heap examination to handle early injection.

Updates the drsyscall test to reflect that we now do expect to see some
syscall failures with early injection.

Disables ANNOTATIONS in the DR build until we have ported Dr. Memory to use
the DR infrastructure (i#1705).

Updates the initial memory walk to not mark the -emulate_brk page as defined.

Removing the mod_pending_tree because we now have first-execution module
load events (DRi#884) will be done separately.

Review-URL: https://codereview.appspot.com/222140043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -812,6 +812,8 @@ else (USER_SPECIFIED_DynamoRIO_DIR)
     set(DEBUG ON CACHE BOOL "DynamoRIO option: debug build")
     set(INTERNAL ON CACHE BOOL "DynamoRIO option: internal build")
   endif ("${CMAKE_BUILD_TYPE}" MATCHES "Debug")
+  # XXX i#1705: we should switch DrMem to use the DR annotation infrastructure
+  set(ANNOTATIONS OFF CACHE BOOL "DynamoRIO option: annotations")
   # We do not want DR install, except for the targets we need for our
   # multi-export-set install of the DRMF.  We need those targets
   # even for BUILDING_SUB_PACKAGE.
