i#1726 port to ARM: port asm_utils to ARM
Renames common/asm_utils.asm to common/asm_utils_x86.asm and adds a new
file common/asm_utils_arm.asm.  Provides an initial implementation for the
3 asm routines for ARM.  Relies on DR 6720bf9 for ARM define for asm header.

Review-URL: https://codereview.appspot.com/239510043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -926,7 +926,12 @@ set(asm_defs ${DR_DEFINES} ${DEFINES} -I "${DynamoRIO_DIR}")
 
 set(asm_deps "${DynamoRIO_DIR}/cpp2asm_defines.h")
 
-add_asm_target(common/asm_utils.asm asm_utils_src asm_utils_tgt ""
+if (ARM)
+  set(asm_file "asm_utils_arm.asm")
+else ()
+  set(asm_file "asm_utils_x86.asm")
+endif ()
+add_asm_target(common/${asm_file} asm_utils_src asm_utils_tgt ""
   "${asm_defs}" "${asm_deps}")
 
 ##################################################
