i#1726 port to ARM: refactor instrumentation control code
Extracts instrumentation events, top-level control code, and location
handling code from readwrite.c and moves it to a new module, instru.c.
This helps isolate the code for better modularity for non-shadow modes
(such as pattern mode).

Review-URL: https://codereview.appspot.com/244070043

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -980,6 +980,7 @@ if (TOOL_DR_HEAPSTAT)
     drmemory/leak.c
     drmemory/options.c
     drmemory/stack.c
+    drmemory/instru.c
     drmemory/spill.c
     drmemory/readwrite.c
     drmemory/fastpath.c
@@ -990,6 +991,7 @@ else (TOOL_DR_HEAPSTAT)
   set(srcs
     drmemory/annotations.c
     drmemory/drmemory.c
+    drmemory/instru.c
     drmemory/spill.c
     drmemory/readwrite.c
     drmemory/fastpath.c
