i#1734 Create Dr. Fuzz: add exception API
This CL adds the exception API, along with a
general iterator for walking the set of fuzz
targets currently live on the call stack.
It also adds a single-threaded test of the
new fault handling API, and the Dr. Fuzz
entries in the doxygen tree.

Review-URL: https://codereview.appspot.com/257120043

--- a/drfuzz/CMakeLists.txt
+++ b/drfuzz/CMakeLists.txt
@@ -51,6 +51,10 @@ if (WIN32)
   set(DEFINES_NO_D ${DEFINES_NO_D} RC_IS_DRFUZZ)
 endif ()
 
+# We set DR libc option on b/c this is needed to link with drsyms_static
+# on VS2010. It has a downside of increase in pdb and dll size (xref DRi#714).
+set(DynamoRIO_USE_LIBC ON)
+
 macro(configure_drfuzz_target target drwrap drmgr drsyms)
   use_DynamoRIO_extension(drfuzz ${drwrap})
   use_DynamoRIO_extension(drfuzz ${drmgr})
