--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -106,7 +106,7 @@ WARN_LOGFILE           =
 # to DR's api/docs/ext.gendox.
 INPUT                  = using.dox \
                          options-docs.dox release.dox main.dox \
-                         drmf.dox drsyscall.dox drsymcache.dox umbra.dox
+                         drmf.dox drsyscall.dox drsymcache.dox umbra.dox drfuzz.dox
 FILE_PATTERNS          =
 RECURSIVE              = NO
 EXCLUDE                =
