i#1745 drfuzz crash: fix duplicate drmgr
Fixes a bug where the shared drfuzz had a static copy of drmgr, resulting
in conflicts and crashes when used with a client using a shared drmgr.

Fixes #1745

Review-URL: https://codereview.appspot.com/259120043

--- a/drfuzz/CMakeLists.txt
+++ b/drfuzz/CMakeLists.txt
@@ -83,7 +83,7 @@ add_library(drfuzz SHARED ${srcs} ${external_srcs})
 set(PREFERRED_BASE 0x79000000)
 configure_DynamoRIO_client(drfuzz)
 set_target_properties(drfuzz PROPERTIES VERSION ${DRMF_VERSION_MAJOR_MINOR})
-configure_drfuzz_target(drfuzz "drwrap_static" "drmgr_static")
+configure_drfuzz_target(drfuzz "drwrap" "drmgr")
 export_drfuzz_target(drfuzz "drwrap" "drmgr")
 install(FILES drfuzz.h DESTINATION ${DRMF_INSTALL_INC})
 
